version_09_intermedia_08/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> FunctionList
Rule 2     FunctionList -> FunctionList FunctionDecl
Rule 3     FunctionList -> FunctionDecl
Rule 4     FunctionDecl -> Type ID ( ParamList ) Block
Rule 5     FunctionDecl -> Type ID ( ) Block
Rule 6     ParamList -> ParamList , Param
Rule 7     ParamList -> Param
Rule 8     Param -> Type ID
Rule 9     Block -> { Declarations Statements }
Rule 10    Declarations -> Declarations Declaration
Rule 11    Declarations -> empty
Rule 12    Declaration -> Type ID ;
Rule 13    Type -> INT
Rule 14    Type -> FLOAT
Rule 15    Type -> VOID
Rule 16    Statements -> Statements Statement
Rule 17    Statements -> empty
Rule 18    Statement -> Assignment
Rule 19    Statement -> IfStatement
Rule 20    Statement -> WhileStatement
Rule 21    Statement -> ReturnStatement
Rule 22    Statement -> Block
Rule 23    Assignment -> ID = Expression ;
Rule 24    IfStatement -> IF ( Expression ) Block
Rule 25    IfStatement -> IF ( Expression ) Block ELSE Block
Rule 26    WhileStatement -> WHILE ( Expression ) Block
Rule 27    ReturnStatement -> RETURN Expression ;
Rule 28    Expression -> Expression EQ Relation
Rule 29    Expression -> Expression NE Relation
Rule 30    Expression -> Expression < Relation
Rule 31    Expression -> Expression LE Relation
Rule 32    Expression -> Expression > Relation
Rule 33    Expression -> Expression GE Relation
Rule 34    Expression -> Relation
Rule 35    Relation -> Relation + Term
Rule 36    Relation -> Relation - Term
Rule 37    Relation -> Term
Rule 38    Term -> Term * Factor
Rule 39    Term -> Term / Factor
Rule 40    Term -> Factor
Rule 41    Factor -> INTLIT
Rule 42    Factor -> FLOATLIT
Rule 43    Factor -> ID
Rule 44    Factor -> ( Expression )
Rule 45    empty -> <empty>

Terminals, with rules where they appear

(                    : 4 5 24 25 26 44
)                    : 4 5 24 25 26 44
*                    : 38
+                    : 35
,                    : 6
-                    : 36
/                    : 39
;                    : 12 23 27
<                    : 30
=                    : 23
>                    : 32
ELSE                 : 25
EQ                   : 28
FLOAT                : 14
FLOATLIT             : 42
GE                   : 33
ID                   : 4 5 8 12 23 43
IF                   : 24 25
INT                  : 13
INTLIT               : 41
LE                   : 31
NE                   : 29
RETURN               : 27
VOID                 : 15
WHILE                : 26
error                : 
{                    : 9
}                    : 9

Nonterminals, with rules where they appear

Assignment           : 18
Block                : 4 5 22 24 25 25 26
Declaration          : 10
Declarations         : 9 10
Expression           : 23 24 25 26 27 28 29 30 31 32 33 44
Factor               : 38 39 40
FunctionDecl         : 2 3
FunctionList         : 1 2
IfStatement          : 19
Param                : 6 7
ParamList            : 4 6
Program              : 0
Relation             : 28 29 30 31 32 33 34 35 36
ReturnStatement      : 21
Statement            : 16
Statements           : 9 16
Term                 : 35 36 37 38 39
Type                 : 4 5 8 12
WhileStatement       : 20
empty                : 11 17

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . FunctionList
    (2) FunctionList -> . FunctionList FunctionDecl
    (3) FunctionList -> . FunctionDecl
    (4) FunctionDecl -> . Type ID ( ParamList ) Block
    (5) FunctionDecl -> . Type ID ( ) Block
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Program                        shift and go to state 1
    FunctionList                   shift and go to state 2
    FunctionDecl                   shift and go to state 3
    Type                           shift and go to state 4

state 1

    (0) S' -> Program .



state 2

    (1) Program -> FunctionList .
    (2) FunctionList -> FunctionList . FunctionDecl
    (4) FunctionDecl -> . Type ID ( ParamList ) Block
    (5) FunctionDecl -> . Type ID ( ) Block
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    $end            reduce using rule 1 (Program -> FunctionList .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    FunctionDecl                   shift and go to state 8
    Type                           shift and go to state 4

state 3

    (3) FunctionList -> FunctionDecl .

    INT             reduce using rule 3 (FunctionList -> FunctionDecl .)
    FLOAT           reduce using rule 3 (FunctionList -> FunctionDecl .)
    VOID            reduce using rule 3 (FunctionList -> FunctionDecl .)
    $end            reduce using rule 3 (FunctionList -> FunctionDecl .)


state 4

    (4) FunctionDecl -> Type . ID ( ParamList ) Block
    (5) FunctionDecl -> Type . ID ( ) Block

    ID              shift and go to state 9


state 5

    (13) Type -> INT .

    ID              reduce using rule 13 (Type -> INT .)


state 6

    (14) Type -> FLOAT .

    ID              reduce using rule 14 (Type -> FLOAT .)


state 7

    (15) Type -> VOID .

    ID              reduce using rule 15 (Type -> VOID .)


state 8

    (2) FunctionList -> FunctionList FunctionDecl .

    INT             reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)
    FLOAT           reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)
    VOID            reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)
    $end            reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)


state 9

    (4) FunctionDecl -> Type ID . ( ParamList ) Block
    (5) FunctionDecl -> Type ID . ( ) Block

    (               shift and go to state 10


state 10

    (4) FunctionDecl -> Type ID ( . ParamList ) Block
    (5) FunctionDecl -> Type ID ( . ) Block
    (6) ParamList -> . ParamList , Param
    (7) ParamList -> . Param
    (8) Param -> . Type ID
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    )               shift and go to state 13
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Type                           shift and go to state 11
    ParamList                      shift and go to state 12
    Param                          shift and go to state 14

state 11

    (8) Param -> Type . ID

    ID              shift and go to state 15


state 12

    (4) FunctionDecl -> Type ID ( ParamList . ) Block
    (6) ParamList -> ParamList . , Param

    )               shift and go to state 16
    ,               shift and go to state 17


state 13

    (5) FunctionDecl -> Type ID ( ) . Block
    (9) Block -> . { Declarations Statements }

    {               shift and go to state 19

    Block                          shift and go to state 18

state 14

    (7) ParamList -> Param .

    )               reduce using rule 7 (ParamList -> Param .)
    ,               reduce using rule 7 (ParamList -> Param .)


state 15

    (8) Param -> Type ID .

    )               reduce using rule 8 (Param -> Type ID .)
    ,               reduce using rule 8 (Param -> Type ID .)


state 16

    (4) FunctionDecl -> Type ID ( ParamList ) . Block
    (9) Block -> . { Declarations Statements }

    {               shift and go to state 19

    Block                          shift and go to state 20

state 17

    (6) ParamList -> ParamList , . Param
    (8) Param -> . Type ID
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Param                          shift and go to state 21
    Type                           shift and go to state 11

state 18

    (5) FunctionDecl -> Type ID ( ) Block .

    INT             reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)
    FLOAT           reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)
    VOID            reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)
    $end            reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)


state 19

    (9) Block -> { . Declarations Statements }
    (10) Declarations -> . Declarations Declaration
    (11) Declarations -> . empty
    (45) empty -> .

    INT             reduce using rule 45 (empty -> .)
    FLOAT           reduce using rule 45 (empty -> .)
    VOID            reduce using rule 45 (empty -> .)
    }               reduce using rule 45 (empty -> .)
    ID              reduce using rule 45 (empty -> .)
    IF              reduce using rule 45 (empty -> .)
    WHILE           reduce using rule 45 (empty -> .)
    RETURN          reduce using rule 45 (empty -> .)
    {               reduce using rule 45 (empty -> .)

    Declarations                   shift and go to state 22
    empty                          shift and go to state 23

state 20

    (4) FunctionDecl -> Type ID ( ParamList ) Block .

    INT             reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)
    FLOAT           reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)
    VOID            reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)
    $end            reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)


state 21

    (6) ParamList -> ParamList , Param .

    )               reduce using rule 6 (ParamList -> ParamList , Param .)
    ,               reduce using rule 6 (ParamList -> ParamList , Param .)


state 22

    (9) Block -> { Declarations . Statements }
    (10) Declarations -> Declarations . Declaration
    (16) Statements -> . Statements Statement
    (17) Statements -> . empty
    (12) Declaration -> . Type ID ;
    (45) empty -> .
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    }               reduce using rule 45 (empty -> .)
    ID              reduce using rule 45 (empty -> .)
    IF              reduce using rule 45 (empty -> .)
    WHILE           reduce using rule 45 (empty -> .)
    RETURN          reduce using rule 45 (empty -> .)
    {               reduce using rule 45 (empty -> .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Statements                     shift and go to state 24
    Declaration                    shift and go to state 25
    empty                          shift and go to state 26
    Type                           shift and go to state 27

state 23

    (11) Declarations -> empty .

    INT             reduce using rule 11 (Declarations -> empty .)
    FLOAT           reduce using rule 11 (Declarations -> empty .)
    VOID            reduce using rule 11 (Declarations -> empty .)
    }               reduce using rule 11 (Declarations -> empty .)
    ID              reduce using rule 11 (Declarations -> empty .)
    IF              reduce using rule 11 (Declarations -> empty .)
    WHILE           reduce using rule 11 (Declarations -> empty .)
    RETURN          reduce using rule 11 (Declarations -> empty .)
    {               reduce using rule 11 (Declarations -> empty .)


state 24

    (9) Block -> { Declarations Statements . }
    (16) Statements -> Statements . Statement
    (18) Statement -> . Assignment
    (19) Statement -> . IfStatement
    (20) Statement -> . WhileStatement
    (21) Statement -> . ReturnStatement
    (22) Statement -> . Block
    (23) Assignment -> . ID = Expression ;
    (24) IfStatement -> . IF ( Expression ) Block
    (25) IfStatement -> . IF ( Expression ) Block ELSE Block
    (26) WhileStatement -> . WHILE ( Expression ) Block
    (27) ReturnStatement -> . RETURN Expression ;
    (9) Block -> . { Declarations Statements }

    }               shift and go to state 28
    ID              shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    RETURN          shift and go to state 38
    {               shift and go to state 19

    Statement                      shift and go to state 29
    Assignment                     shift and go to state 30
    IfStatement                    shift and go to state 31
    WhileStatement                 shift and go to state 32
    ReturnStatement                shift and go to state 33
    Block                          shift and go to state 34

state 25

    (10) Declarations -> Declarations Declaration .

    INT             reduce using rule 10 (Declarations -> Declarations Declaration .)
    FLOAT           reduce using rule 10 (Declarations -> Declarations Declaration .)
    VOID            reduce using rule 10 (Declarations -> Declarations Declaration .)
    }               reduce using rule 10 (Declarations -> Declarations Declaration .)
    ID              reduce using rule 10 (Declarations -> Declarations Declaration .)
    IF              reduce using rule 10 (Declarations -> Declarations Declaration .)
    WHILE           reduce using rule 10 (Declarations -> Declarations Declaration .)
    RETURN          reduce using rule 10 (Declarations -> Declarations Declaration .)
    {               reduce using rule 10 (Declarations -> Declarations Declaration .)


state 26

    (17) Statements -> empty .

    }               reduce using rule 17 (Statements -> empty .)
    ID              reduce using rule 17 (Statements -> empty .)
    IF              reduce using rule 17 (Statements -> empty .)
    WHILE           reduce using rule 17 (Statements -> empty .)
    RETURN          reduce using rule 17 (Statements -> empty .)
    {               reduce using rule 17 (Statements -> empty .)


state 27

    (12) Declaration -> Type . ID ;

    ID              shift and go to state 39


state 28

    (9) Block -> { Declarations Statements } .

    INT             reduce using rule 9 (Block -> { Declarations Statements } .)
    FLOAT           reduce using rule 9 (Block -> { Declarations Statements } .)
    VOID            reduce using rule 9 (Block -> { Declarations Statements } .)
    $end            reduce using rule 9 (Block -> { Declarations Statements } .)
    }               reduce using rule 9 (Block -> { Declarations Statements } .)
    ID              reduce using rule 9 (Block -> { Declarations Statements } .)
    IF              reduce using rule 9 (Block -> { Declarations Statements } .)
    WHILE           reduce using rule 9 (Block -> { Declarations Statements } .)
    RETURN          reduce using rule 9 (Block -> { Declarations Statements } .)
    {               reduce using rule 9 (Block -> { Declarations Statements } .)
    ELSE            reduce using rule 9 (Block -> { Declarations Statements } .)


state 29

    (16) Statements -> Statements Statement .

    }               reduce using rule 16 (Statements -> Statements Statement .)
    ID              reduce using rule 16 (Statements -> Statements Statement .)
    IF              reduce using rule 16 (Statements -> Statements Statement .)
    WHILE           reduce using rule 16 (Statements -> Statements Statement .)
    RETURN          reduce using rule 16 (Statements -> Statements Statement .)
    {               reduce using rule 16 (Statements -> Statements Statement .)


state 30

    (18) Statement -> Assignment .

    }               reduce using rule 18 (Statement -> Assignment .)
    ID              reduce using rule 18 (Statement -> Assignment .)
    IF              reduce using rule 18 (Statement -> Assignment .)
    WHILE           reduce using rule 18 (Statement -> Assignment .)
    RETURN          reduce using rule 18 (Statement -> Assignment .)
    {               reduce using rule 18 (Statement -> Assignment .)


state 31

    (19) Statement -> IfStatement .

    }               reduce using rule 19 (Statement -> IfStatement .)
    ID              reduce using rule 19 (Statement -> IfStatement .)
    IF              reduce using rule 19 (Statement -> IfStatement .)
    WHILE           reduce using rule 19 (Statement -> IfStatement .)
    RETURN          reduce using rule 19 (Statement -> IfStatement .)
    {               reduce using rule 19 (Statement -> IfStatement .)


state 32

    (20) Statement -> WhileStatement .

    }               reduce using rule 20 (Statement -> WhileStatement .)
    ID              reduce using rule 20 (Statement -> WhileStatement .)
    IF              reduce using rule 20 (Statement -> WhileStatement .)
    WHILE           reduce using rule 20 (Statement -> WhileStatement .)
    RETURN          reduce using rule 20 (Statement -> WhileStatement .)
    {               reduce using rule 20 (Statement -> WhileStatement .)


state 33

    (21) Statement -> ReturnStatement .

    }               reduce using rule 21 (Statement -> ReturnStatement .)
    ID              reduce using rule 21 (Statement -> ReturnStatement .)
    IF              reduce using rule 21 (Statement -> ReturnStatement .)
    WHILE           reduce using rule 21 (Statement -> ReturnStatement .)
    RETURN          reduce using rule 21 (Statement -> ReturnStatement .)
    {               reduce using rule 21 (Statement -> ReturnStatement .)


state 34

    (22) Statement -> Block .

    }               reduce using rule 22 (Statement -> Block .)
    ID              reduce using rule 22 (Statement -> Block .)
    IF              reduce using rule 22 (Statement -> Block .)
    WHILE           reduce using rule 22 (Statement -> Block .)
    RETURN          reduce using rule 22 (Statement -> Block .)
    {               reduce using rule 22 (Statement -> Block .)


state 35

    (23) Assignment -> ID . = Expression ;

    =               shift and go to state 40


state 36

    (24) IfStatement -> IF . ( Expression ) Block
    (25) IfStatement -> IF . ( Expression ) Block ELSE Block

    (               shift and go to state 41


state 37

    (26) WhileStatement -> WHILE . ( Expression ) Block

    (               shift and go to state 42


state 38

    (27) ReturnStatement -> RETURN . Expression ;
    (28) Expression -> . Expression EQ Relation
    (29) Expression -> . Expression NE Relation
    (30) Expression -> . Expression < Relation
    (31) Expression -> . Expression LE Relation
    (32) Expression -> . Expression > Relation
    (33) Expression -> . Expression GE Relation
    (34) Expression -> . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Expression                     shift and go to state 43
    Relation                       shift and go to state 44
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 39

    (12) Declaration -> Type ID . ;

    ;               shift and go to state 51


state 40

    (23) Assignment -> ID = . Expression ;
    (28) Expression -> . Expression EQ Relation
    (29) Expression -> . Expression NE Relation
    (30) Expression -> . Expression < Relation
    (31) Expression -> . Expression LE Relation
    (32) Expression -> . Expression > Relation
    (33) Expression -> . Expression GE Relation
    (34) Expression -> . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Expression                     shift and go to state 52
    Relation                       shift and go to state 44
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 41

    (24) IfStatement -> IF ( . Expression ) Block
    (25) IfStatement -> IF ( . Expression ) Block ELSE Block
    (28) Expression -> . Expression EQ Relation
    (29) Expression -> . Expression NE Relation
    (30) Expression -> . Expression < Relation
    (31) Expression -> . Expression LE Relation
    (32) Expression -> . Expression > Relation
    (33) Expression -> . Expression GE Relation
    (34) Expression -> . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Expression                     shift and go to state 53
    Relation                       shift and go to state 44
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 42

    (26) WhileStatement -> WHILE ( . Expression ) Block
    (28) Expression -> . Expression EQ Relation
    (29) Expression -> . Expression NE Relation
    (30) Expression -> . Expression < Relation
    (31) Expression -> . Expression LE Relation
    (32) Expression -> . Expression > Relation
    (33) Expression -> . Expression GE Relation
    (34) Expression -> . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Expression                     shift and go to state 54
    Relation                       shift and go to state 44
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 43

    (27) ReturnStatement -> RETURN Expression . ;
    (28) Expression -> Expression . EQ Relation
    (29) Expression -> Expression . NE Relation
    (30) Expression -> Expression . < Relation
    (31) Expression -> Expression . LE Relation
    (32) Expression -> Expression . > Relation
    (33) Expression -> Expression . GE Relation

    ;               shift and go to state 55
    EQ              shift and go to state 56
    NE              shift and go to state 57
    <               shift and go to state 58
    LE              shift and go to state 59
    >               shift and go to state 60
    GE              shift and go to state 61


state 44

    (34) Expression -> Relation .
    (35) Relation -> Relation . + Term
    (36) Relation -> Relation . - Term

    ;               reduce using rule 34 (Expression -> Relation .)
    EQ              reduce using rule 34 (Expression -> Relation .)
    NE              reduce using rule 34 (Expression -> Relation .)
    <               reduce using rule 34 (Expression -> Relation .)
    LE              reduce using rule 34 (Expression -> Relation .)
    >               reduce using rule 34 (Expression -> Relation .)
    GE              reduce using rule 34 (Expression -> Relation .)
    )               reduce using rule 34 (Expression -> Relation .)
    +               shift and go to state 62
    -               shift and go to state 63


state 45

    (37) Relation -> Term .
    (38) Term -> Term . * Factor
    (39) Term -> Term . / Factor

    +               reduce using rule 37 (Relation -> Term .)
    -               reduce using rule 37 (Relation -> Term .)
    ;               reduce using rule 37 (Relation -> Term .)
    EQ              reduce using rule 37 (Relation -> Term .)
    NE              reduce using rule 37 (Relation -> Term .)
    <               reduce using rule 37 (Relation -> Term .)
    LE              reduce using rule 37 (Relation -> Term .)
    >               reduce using rule 37 (Relation -> Term .)
    GE              reduce using rule 37 (Relation -> Term .)
    )               reduce using rule 37 (Relation -> Term .)
    *               shift and go to state 64
    /               shift and go to state 65


state 46

    (40) Term -> Factor .

    *               reduce using rule 40 (Term -> Factor .)
    /               reduce using rule 40 (Term -> Factor .)
    +               reduce using rule 40 (Term -> Factor .)
    -               reduce using rule 40 (Term -> Factor .)
    ;               reduce using rule 40 (Term -> Factor .)
    EQ              reduce using rule 40 (Term -> Factor .)
    NE              reduce using rule 40 (Term -> Factor .)
    <               reduce using rule 40 (Term -> Factor .)
    LE              reduce using rule 40 (Term -> Factor .)
    >               reduce using rule 40 (Term -> Factor .)
    GE              reduce using rule 40 (Term -> Factor .)
    )               reduce using rule 40 (Term -> Factor .)


state 47

    (41) Factor -> INTLIT .

    *               reduce using rule 41 (Factor -> INTLIT .)
    /               reduce using rule 41 (Factor -> INTLIT .)
    +               reduce using rule 41 (Factor -> INTLIT .)
    -               reduce using rule 41 (Factor -> INTLIT .)
    ;               reduce using rule 41 (Factor -> INTLIT .)
    EQ              reduce using rule 41 (Factor -> INTLIT .)
    NE              reduce using rule 41 (Factor -> INTLIT .)
    <               reduce using rule 41 (Factor -> INTLIT .)
    LE              reduce using rule 41 (Factor -> INTLIT .)
    >               reduce using rule 41 (Factor -> INTLIT .)
    GE              reduce using rule 41 (Factor -> INTLIT .)
    )               reduce using rule 41 (Factor -> INTLIT .)


state 48

    (42) Factor -> FLOATLIT .

    *               reduce using rule 42 (Factor -> FLOATLIT .)
    /               reduce using rule 42 (Factor -> FLOATLIT .)
    +               reduce using rule 42 (Factor -> FLOATLIT .)
    -               reduce using rule 42 (Factor -> FLOATLIT .)
    ;               reduce using rule 42 (Factor -> FLOATLIT .)
    EQ              reduce using rule 42 (Factor -> FLOATLIT .)
    NE              reduce using rule 42 (Factor -> FLOATLIT .)
    <               reduce using rule 42 (Factor -> FLOATLIT .)
    LE              reduce using rule 42 (Factor -> FLOATLIT .)
    >               reduce using rule 42 (Factor -> FLOATLIT .)
    GE              reduce using rule 42 (Factor -> FLOATLIT .)
    )               reduce using rule 42 (Factor -> FLOATLIT .)


state 49

    (43) Factor -> ID .

    *               reduce using rule 43 (Factor -> ID .)
    /               reduce using rule 43 (Factor -> ID .)
    +               reduce using rule 43 (Factor -> ID .)
    -               reduce using rule 43 (Factor -> ID .)
    ;               reduce using rule 43 (Factor -> ID .)
    EQ              reduce using rule 43 (Factor -> ID .)
    NE              reduce using rule 43 (Factor -> ID .)
    <               reduce using rule 43 (Factor -> ID .)
    LE              reduce using rule 43 (Factor -> ID .)
    >               reduce using rule 43 (Factor -> ID .)
    GE              reduce using rule 43 (Factor -> ID .)
    )               reduce using rule 43 (Factor -> ID .)


state 50

    (44) Factor -> ( . Expression )
    (28) Expression -> . Expression EQ Relation
    (29) Expression -> . Expression NE Relation
    (30) Expression -> . Expression < Relation
    (31) Expression -> . Expression LE Relation
    (32) Expression -> . Expression > Relation
    (33) Expression -> . Expression GE Relation
    (34) Expression -> . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Expression                     shift and go to state 66
    Relation                       shift and go to state 44
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 51

    (12) Declaration -> Type ID ; .

    INT             reduce using rule 12 (Declaration -> Type ID ; .)
    FLOAT           reduce using rule 12 (Declaration -> Type ID ; .)
    VOID            reduce using rule 12 (Declaration -> Type ID ; .)
    }               reduce using rule 12 (Declaration -> Type ID ; .)
    ID              reduce using rule 12 (Declaration -> Type ID ; .)
    IF              reduce using rule 12 (Declaration -> Type ID ; .)
    WHILE           reduce using rule 12 (Declaration -> Type ID ; .)
    RETURN          reduce using rule 12 (Declaration -> Type ID ; .)
    {               reduce using rule 12 (Declaration -> Type ID ; .)


state 52

    (23) Assignment -> ID = Expression . ;
    (28) Expression -> Expression . EQ Relation
    (29) Expression -> Expression . NE Relation
    (30) Expression -> Expression . < Relation
    (31) Expression -> Expression . LE Relation
    (32) Expression -> Expression . > Relation
    (33) Expression -> Expression . GE Relation

    ;               shift and go to state 67
    EQ              shift and go to state 56
    NE              shift and go to state 57
    <               shift and go to state 58
    LE              shift and go to state 59
    >               shift and go to state 60
    GE              shift and go to state 61


state 53

    (24) IfStatement -> IF ( Expression . ) Block
    (25) IfStatement -> IF ( Expression . ) Block ELSE Block
    (28) Expression -> Expression . EQ Relation
    (29) Expression -> Expression . NE Relation
    (30) Expression -> Expression . < Relation
    (31) Expression -> Expression . LE Relation
    (32) Expression -> Expression . > Relation
    (33) Expression -> Expression . GE Relation

    )               shift and go to state 68
    EQ              shift and go to state 56
    NE              shift and go to state 57
    <               shift and go to state 58
    LE              shift and go to state 59
    >               shift and go to state 60
    GE              shift and go to state 61


state 54

    (26) WhileStatement -> WHILE ( Expression . ) Block
    (28) Expression -> Expression . EQ Relation
    (29) Expression -> Expression . NE Relation
    (30) Expression -> Expression . < Relation
    (31) Expression -> Expression . LE Relation
    (32) Expression -> Expression . > Relation
    (33) Expression -> Expression . GE Relation

    )               shift and go to state 69
    EQ              shift and go to state 56
    NE              shift and go to state 57
    <               shift and go to state 58
    LE              shift and go to state 59
    >               shift and go to state 60
    GE              shift and go to state 61


state 55

    (27) ReturnStatement -> RETURN Expression ; .

    }               reduce using rule 27 (ReturnStatement -> RETURN Expression ; .)
    ID              reduce using rule 27 (ReturnStatement -> RETURN Expression ; .)
    IF              reduce using rule 27 (ReturnStatement -> RETURN Expression ; .)
    WHILE           reduce using rule 27 (ReturnStatement -> RETURN Expression ; .)
    RETURN          reduce using rule 27 (ReturnStatement -> RETURN Expression ; .)
    {               reduce using rule 27 (ReturnStatement -> RETURN Expression ; .)


state 56

    (28) Expression -> Expression EQ . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Relation                       shift and go to state 70
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 57

    (29) Expression -> Expression NE . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Relation                       shift and go to state 71
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 58

    (30) Expression -> Expression < . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Relation                       shift and go to state 72
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 59

    (31) Expression -> Expression LE . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Relation                       shift and go to state 73
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 60

    (32) Expression -> Expression > . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Relation                       shift and go to state 74
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 61

    (33) Expression -> Expression GE . Relation
    (35) Relation -> . Relation + Term
    (36) Relation -> . Relation - Term
    (37) Relation -> . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Relation                       shift and go to state 75
    Term                           shift and go to state 45
    Factor                         shift and go to state 46

state 62

    (35) Relation -> Relation + . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )

    INTLIT          shift and go to state 47
    FLOATLIT        shift and go to state 48
    ID              shift and go to state 49
    (               shift and go to state 50

    Term                           shift and go to state 76
    Factor                         shift and go to state 46

state 63

    (36) Relation -> Relation - . Term
    (38) Term -> . Term * Factor
    (39) Term -> . Term / Factor
    (40) Term -> . Factor
    (41) Factor -> . INTLIT
    (42) Factor -> . FLOATLIT
    (43) Factor -> . ID
    (44) Factor -> . ( Expression )
